# liner-cementing-job-calculator

./: .env.example  .env.local  .gitignore  App.tsx  PRD_COMPARISON_ANALYSIS.md  cspell.json  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  social-posts.md  technical-terms.txt  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: deploy-pages.yml  e2e.yml
backend/: README.md  pyproject.toml
backend/app/: engine.py  main.py
components/: AIInsights.tsx  CalculationCard.tsx  CalculationErrorBoundary.tsx  CementingVisualizationContainer.tsx  Chart.tsx  ChartLine.tsx  DataRow.tsx  DetailedResults.tsx  FilteredMetricChart.tsx  FluidControl.tsx  FluidInputs.tsx  FluidPieChart.tsx  Modal.tsx  PipeInput.tsx  ResultTabButton.tsx  TermExplainerModal.tsx  WellAnalysisReport.tsx  WellPath3D.tsx  WellSchematic.tsx
components/ui/: button.tsx  card.tsx  chart.tsx
docs/: IMPLEMENTATION_SUMMARY.md  LIVE_VISUALIZATION_INTEGRATION.md  REPORT.md
pre-deployment/: App.tsx  metadata.json  types.ts
pre-deployment/components/: Chart.tsx  Modal.tsx  WellSchematic.tsx
pre-deployment/services/: geminiService.ts  torqueDragService.ts
pre-deployment/td-liner-sim/: package.json
public/landing-pages/: analytics.js  clinicflow.html  dashboard.html  enrollboost.html  menumind.html  pitstop.html  rails.html  (+1 more)
services/: backendApi.ts  calculationAdapter.ts  dataLoader.ts  enhancedCalculationEngine.ts  geminiService.ts  torqueDragService.ts
tests/: smoke.spec.ts
utils/: cx.ts  htmlSanitizer.tsx  logger.ts  surveyCalculations.ts
(+17 files in other folders)
